29 August 2008: Wouter
	- version 1.1 number in trunk.
	- harden-referral-path option for query for NS records.
	  Default turns off expensive, experimental option.

28 August 2008: Wouter
	- fixup logfile handling; it is created with correct permissions
	  again. (from bugfix#199).
	  Some errors are not written to logfile (pidfile writing, forking),
	  and these are only visible by using the -d commandline flag.

27 August 2008: Wouter
	- daemon(3) is causing problems for people. Reverting the patch.
	  bug#200, and 199 and 203 contain sideline discussion on it.
	- bug#199 fixed: pidfile can be outside chroot. openlog is done before
	  chroot and drop permissions.
	- config option to set size of aggressive negative cache,
	  neg-cache-size.
	- bug#203 fixed: dlv has been implemented.

26 August 2008: Wouter
	- test for insecure zone when DLV is in use, also does negative cache.
	- test for trustanchor when DLV is in use (the anchor works).
	- test for DLV used for a zone below a trustanchor.
	- added scrub filter for overreaching NSEC records and unit test.
	- iana portlist update
	- use of setresuid or setreuid when available.
	- use daemon(3) if available.

25 August 2008: Wouter
	- realclean patch from Robert Edmonds.

22 August 2008: Wouter
	- nicer debuglogging of DLV.
	- test with secure delegation inside the DLV repository.

21 August 2008: Wouter
	- negative cache code linked into validator, for DLV use.
	  negative cache works for DLV.
	- iana portlist update.
	- dlv-anchor option for unit tests.
	- fixup NSEC_AT_APEX classification for short typemaps.
	- ldns-testns has subdomain checks, for unit tests.

20 August 2008: Wouter
	- negative cache code, reviewed.

18 August 2008: Wouter
	- changes info: in logfile to notice: info: or debug: depending on 
	  the verbosity of the statements.  Better logfile message
	  classification.
	- bug #208: extra rc.d unbound flexibility for freebsd/nanobsd.

15 August 2008: Wouter