@@ -31,8 +31,6 @@ total 6 of 8 weeks; 2 weeks for maintenance activities.
   because of the added load to 3rd parties.
 * block nonRD queries, acl like.
 	what about our authority features, those are allowed.
-	one option that controls on/off of all private space.
-	note in config/man that we may consider turning on by default.
 * DoS vector, flush more.
 	50% of max is for run-to-completion
 	50% rest is for lifo queue with 100 msec timeout.
@@ -41,6 +39,8 @@ if they have no signer or a different signed. Validate if you can,
 otherwise leave unchecked.
 * block DNS rebinding attacks, block all A records from 1918 IP blocks,
 like dnswall does.  Allow certain subdomains to do it, config options.
+	one option that controls on/off of all private space.
+	note in config/man that we may consider turning on by default.
 
 *** Remote control feature
 * remote control using a TCP unbound-control commandline app.  
@@ -64,6 +64,7 @@ like dnswall does.  Allow certain subdomains to do it, config options.
 *** Requested
 * fallback to noEDNS if all queries are dropped.
 * dnssec lameness fixen. Check to make sure.
+* negative caching to avoid DS queries, NSEC, NSEC3 (w params).
 * SHA256 supported fully.
 * Make stub to localhost on different port work.
 * IPv6 reverse, IP4 reverse local-data shorthand for PTR records (?).
