@@ -26,6 +26,7 @@ RANGE_END
 
 STEP 1 QUERY
 ENTRY_BEGIN
+REPLY RD
 SECTION QUESTION
 www.example.com. IN A
 ENTRY_END
@@ -43,6 +44,7 @@ STEP 3 NOTHING
 ; another query
 STEP 4 QUERY
 ENTRY_BEGIN
+REPLY RD
 SECTION QUESTION
 www.example.net. IN A
 ENTRY_END
