@@ -4,6 +4,7 @@ server:
 	trust-anchor: "example.com.    3600    IN      DS      2854 3 1 46e4ffc6e9a4793b488954bd3f0cc6af0dfb201b"
 	val-override-date: "20070916134226"
 	directory: ""
+	access-control: 127.0.0.1 allow_snoop
 
 stub-zone:
 	name: "."
